fix letter spacing in nav bar

--- a/_assets/css/components/_typography.scss
+++ b/_assets/css/components/_typography.scss
@@ -46,6 +46,7 @@ h5 {
 nav a {
   font-family: 'Roboto-Black', sans-serif;
   color: $cararra !important;
+  letter-spacing: .1em;
   font-size: 18px;
   line-height: 22px;
 }
